<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Hello Bhaskar">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home"/>
                <item
                    android:id="@+id/nav_noixorgo"
                    android:icon="@drawable/ic_noixorgo"
                    android:title="@string/noixorgo" />
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_event"
                    android:title="@string/events" />
                <item
                    android:id="@+id/nav_blog"
                    android:icon="@drawable/edit"
                    android:title="@string/blog" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_gallery"
                    android:title="@string/gallery" />
                <item
                    android:id="@+id/nav_team"
                    android:icon="@drawable/ic_team"
                    android:title="@string/team" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="About">
            <menu>
                <item
                    android:id="@+id/nav_developer"
                    android:icon="@drawable/ic_developers"
                    android:title="Developers" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="Share" />

                <item
                    android:id="@+id/nav_rateUs"
                    android:icon="@drawable/ic_rate"
                    android:title="Rate Us" />
            </menu>
        </item>
    </group>

</menu>